--- a/Resources/views/Mensaje/show.html.twig
+++ b/Resources/views/Mensaje/show.html.twig
@@ -1,3 +1,6 @@
+{% extends 'PtuitBundle::plantilla.html.twig' %}
+
+{% block Ptuits %}
 <h1>Mensaje</h1>
 
 <table class="record_properties">
@@ -29,7 +32,8 @@
     <li>
         <form action="{{ path('ptuit_delete', { 'id': entity.id }) }}" method="post">
             {{ form_widget(delete_form) }}
-            <button type="submit">Delete</button>
-        </form>
-    </li>
-</ul>
+                <button type="submit">Delete</button>
+            </form>
+        </li>
+    </ul>
+{% endblock %}
