--- a/Resources/views/plantilla.html.twig
+++ b/Resources/views/plantilla.html.twig
@@ -13,7 +13,7 @@
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     {% block javascripts %}
         <script type="text/javascript" src="{{ asset('bundles/ptuit/js/jquery.js') }}"></script>
-        <script type="text/javascript" src="{{ asset('bundles/ptuit/js/script.js') }}"></script>
+        <script type="text/javascript" src="{{ asset('bundles/ptuit/js/ptuit.js') }}"></script>
     {% endblock %}
     </head>
     <body>
