--- a/Resources/views/plantilla.html.twig
+++ b/Resources/views/plantilla.html.twig
@@ -50,13 +50,13 @@
                                         <div class="r"></div>
                                         <ul class="menu">
                                             <li>
-                                                <a href="#" class="active"><span class="l"></span><span class="r"></span><span class="t">Home</span></a>
+                                                <a href="#" class="active"><span class="l"></span><span class="r"></span><span class="t">Cronologia</span></a>
                                             </li>
                                             <li>
-                                                <a href="#"><span class="l"></span><span class="r"></span><span class="t">Menu Item</span></a>
+                                                <a href="#"><span class="l"></span><span class="r"></span><span class="t">Mis Ptuits</span></a>
                                             </li>		
                                             <li>
-                                                <a href="#"><span class="l"></span><span class="r"></span><span class="t">About</span></a>
+                                                <a href="#"><span class="l"></span><span class="r"></span><span class="t">Perfil</span></a>
                                             </li>
                                         </ul>
                                     </div>
@@ -439,7 +439,8 @@
                                             <div class="pie-body">
                                                 <a href="#" class="rss-icon" title="RSS"></a>
                                                 <div class="pie-text">
-                                                    <p>Grupo Ptuit- Licencia AGPL</p>
+                                                    <p>Desarrollado por Rubentxu y Grupo Ptuit- Licencia AGPL</p>
+                                                    <p>Rubentxu74@gmail.com</p>
                                                 </div>
                                                 <div class="cleared"></div>
                                             </div>
