--- a/Resources/views/Security/registro.html.twig
+++ b/Resources/views/Security/registro.html.twig
@@ -1,7 +1,7 @@
 {% extends 'PtuitBundle::plantilla.html.twig' %}
 {% block alertas %}
         <div id="alert" >            
-        {{form_errors(form.nick) }}{{form_errors(form.nombre) }}
+        {{form_errors(form.nick) }}
         {{form_errors(form.email) }}{{form_errors(form.password) }}           
         </div>
 {% endblock %}
@@ -25,13 +25,7 @@
     <p>
         {{ form_label(form.nick) }} 
         {{ form_widget(form.nick) }}*
-    </p>
-
-    <span style="color: #CC0000">{{ form_errors(form.nombre) }}</span>
-    <p>
-        {{ form_label(form.nombre) }} 
-        {{ form_widget(form.nombre) }}*
-    </p>
+    </p>    
 
     <span style="color: #CC0000">{{ form_errors(form.email) }}</span>
     <p>
