--- a/Resources/views/Security/login.html.twig
+++ b/Resources/views/Security/login.html.twig
@@ -44,17 +44,17 @@
                         <fieldset >
                             <p >
                                 <label for="modlgn_username">Email</label><br />
-                                <input id="modlgn_username" type="text" name="_username" 
+                                <input  type="text" name="_username" 
                                        class="inputbox" alt="username" size="18" value="{{ last_username }}" />
                             </p>
                             <p >
                                 <label for="modlgn_passwd">Password</label><br />
-                                <input id="modlgn_passwd" type="password" name="_password" 
+                                <input  type="password" name="_password" 
                                        class="inputbox" size="18" alt="password" />
                             </p>
                             <p >
-                                <label for="modlgn_remember">Recordar</label>
-                                <input id="modlgn_remember" type="checkbox" name="remember" 
+                                <label for="remember_me">Recordar</label>
+                                <input id="remember_me" name="_remember_me" type="checkbox"  
                                        class="inputbox" value="yes" alt="Remember Me" />
                             </p>
                             <span class="art-button-wrapper">
